add remote component in shell html

--- a/micro-frontend-demo/projects/shell/src/app/app.component.html
+++ b/micro-frontend-demo/projects/shell/src/app/app.component.html
@@ -2,7 +2,7 @@
   <li><img src="../assets/angular.png" width="50"></li>
   <li><a routerLink="/">Home</a></li>
   <li><a routerLink="/dashboard/table">Dashboard Table</a></li>
-  <li><a routerLink="/dashboard/stat">Dashboard Stat</a></li>
+  <li><a routerLink="/catalog/show">Catalog</a></li>
 </ul>
 
 <router-outlet></router-outlet>
