working on remote component add & communication from host html

--- a/micro-frontend-demo/projects/products/src/app/dashboard/dashboard-table/dashboard-table.component.html
+++ b/micro-frontend-demo/projects/products/src/app/dashboard/dashboard-table/dashboard-table.component.html
@@ -1,1 +1,9 @@
-<p>dashboard-table works!</p>
+<div class="col-sm-4">
+  <div class="card">
+    <div class="card-body">
+      <h5 class="card-title">Product Dashboard</h5>
+      <p class="card-text">MFE Remote Component</p>
+      <a class="btn btn-secondary">Click Here</a>
+    </div>
+  </div>
+</div>
