--- a/micro-frontend-demo/projects/shell/src/app/landingpage/landingpage.component.html
+++ b/micro-frontend-demo/projects/shell/src/app/landingpage/landingpage.component.html
@@ -1,7 +1,9 @@
 <p>Welcome to Micro-Frontend!</p>
-
-<div>
-  <button (click)="load()">Load!</button>
-</div>
-
 <div #placeHolder></div>
+
+<ng-template
+  mfeOutlet="products"
+  mfeOutletModule="CatalogModule"
+  mfeOutletComponent="CatalogComponent"
+>
+</ng-template>
