--- a/micro-frontend-demo/projects/products/src/app/catalog/catalog/catalog.component.html
+++ b/micro-frontend-demo/projects/products/src/app/catalog/catalog/catalog.component.html
@@ -1,9 +1,10 @@
-<div class="col-sm-4">
+<div class="col-6">
   <div class="card">
     <div class="card-body">
       <h5 class="card-title">Product Catalog</h5>
       <p class="card-text">MFE Remote Component</p>
-      <a class="btn btn-secondary">Click Here</a>
+      <p>Input: {{ text }}</p>
+      <a (click)="onButtonClick()" class="btn btn-secondary">Click Here</a>
     </div>
   </div>
 </div>
