--- a/micro-frontend-demo/projects/products/src/app/dashboard/dashboard-table/dashboard-table.component.html
+++ b/micro-frontend-demo/projects/products/src/app/dashboard/dashboard-table/dashboard-table.component.html
@@ -1,8 +1,9 @@
-<div class="col-sm-4">
+<div class="col-6">
   <div class="card">
     <div class="card-body">
       <h5 class="card-title">Product Dashboard</h5>
       <p class="card-text">MFE Remote Component</p>
+      <p>Input: {{ text }}</p>
       <a class="btn btn-secondary">Click Here</a>
     </div>
   </div>
