--- a/micro-frontend-demo/projects/shell/src/app/app.component.html
+++ b/micro-frontend-demo/projects/shell/src/app/app.component.html
@@ -1,7 +1,7 @@
 <ul>
   <li><img src="../assets/angular.png" width="50"></li>
   <li><a routerLink="/">Home</a></li>
-  <li><a routerLink="/dashboard/table">Dashboard Table</a></li>
+  <li><a routerLink="/dashboard/table">Dashboard</a></li>
   <li><a routerLink="/catalog/show">Catalog</a></li>
 </ul>
 
