communication between host & mfe using customEvent

--- a/micro-frontend-demo/projects/products/src/app/dashboard/dashboard-table/dashboard-table.component.html
+++ b/micro-frontend-demo/projects/products/src/app/dashboard/dashboard-table/dashboard-table.component.html
@@ -4,7 +4,7 @@
       <h5 class="card-title">Product Dashboard</h5>
       <p class="card-text">MFE Remote Component</p>
       <p>Input: {{ text }}</p>
-      <a class="btn btn-secondary">Click Here</a>
+      <a class="btn btn-secondary" (click)="onButtonClick()">Click Here</a>
     </div>
   </div>
 </div>
