documentation update, code refactoring

--- a/micro-frontend-demo/projects/shell/src/app/app.component.html
+++ b/micro-frontend-demo/projects/shell/src/app/app.component.html
@@ -1,8 +1,8 @@
 <ul>
   <li><img src="../assets/angular.png" width="50"></li>
   <li><a routerLink="/">Home</a></li>
-  <li><a routerLink="/dashboard/table">Dashboard</a></li>
-  <li><a routerLink="/catalog/show">Catalog</a></li>
+  <li><a routerLink="/dashboard/dashboard">Dashboard</a></li>
+  <li><a routerLink="/catalog/catalog">Catalog</a></li>
 </ul>
 
 <router-outlet></router-outlet>
