--- a/micro-frontend-demo/projects/shell/src/app/landingpage/landingpage.component.html
+++ b/micro-frontend-demo/projects/shell/src/app/landingpage/landingpage.component.html
@@ -16,7 +16,7 @@
     <ng-container
       mfeOutlet="products"
       mfeOutletModule="DashboardModule"
-      mfeOutletComponent="DashboardTableComponent"
+      mfeOutletComponent="DashboardComponent"
       [mfeOutletInputs]="{ text: text }"
     >
     </ng-container>
